Add a max-page-size config option and paging for search results (#1485)
Adds a `max-page-size` option to configure the maximum size when
returning lists from the api. For the search endpoint, enable paging
parameters `page` and `pageSize`. The `pageSize` will be capped to the
`max-page-size` config value.

Refs: #1294
